--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,10 @@
         {{plot1 | safe}}
     </div>
 
+    <div class="container">
+        {{plot2 | safe}}
+    </div>
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
