--- a/static/css/home.css
+++ b/static/css/home.css
@@ -23,6 +23,19 @@
   padding-left: 1%;
 }
 
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
 .line_graph{
   text-align: center;
   color: rgba(219, 41, 9, 0.829);
@@ -47,3 +60,4 @@
   color: rgba(163, 10, 10, 0.829);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
