modifying the code

--- a/templates/home.html
+++ b/templates/home.html
@@ -67,10 +67,10 @@
     <br>
     <div class="bar_graph">
         <h2><u>Sentiment of Indians During Different Phases of Lockdown</u></h2>
-        <h3 style="text-align: center;">(In Bar Graph Formation)</h3>
+        <h3 style="text-align: center;">(In Line and Bar Graph Formation)</h3>
     </div>
     <br>
-    <p class="bar_theory">The Sentiments of Indian people related to lockdown and COVID-19 during the different phases of lockdown is shown with the help of bar graph below. Here four different bar graphs are shown representing the 4 different phases of lockdown which started from 25/March/2020 and upto 31/May/2020. After that one another graph is shown which represents complete sentiments of all the 4 phases together.
+    <p class="bar_theory">The Sentiments of Indian people related to lockdown and COVID-19 during the different phases of lockdown is shown with the help of Line and Bar graph below. Here four different Line graphs are shown representing the 4 different phases of lockdown which started from 25/March/2020 and upto 31/May/2020. After that one Bar graph is shown which represents complete sentiments of all the 4 phases together.
         <br>
        <u>The First Phase was from </u>:- 25/March/2020 - 14/April/2020
         <br>
@@ -86,13 +86,13 @@
     <br>
     <br>
     <div class="row">
-        <div class="col s6">{{ls[0] | safe}}</div>
-        <div class="col s6">{{ls[1] | safe}}</div>
+        <div class="column">{{ls[0] | safe}}</div>
+        <div class="column">{{ls[1] | safe}}</div>
     </div>
     <br>
     <div class="row">
-        <div class="col s6">{{ls[2] | safe}}</div>
-        <div class="col s6">{{ls[3] | safe}}</div>
+        <div class="column">{{ls[2] | safe}}</div>
+        <div class="column">{{ls[3] | safe}}</div>
     </div>
     <br>
     {{ls[4] | safe}}
