Edited styling to set graphs properly

--- a/templates/home.html
+++ b/templates/home.html
@@ -101,15 +101,12 @@
     <br>
     <div class="line_graph">
         <h2><u>Sentiment of Indians During Complete Lockdown</u></h2>
-        <h3 style="text-align: center;">(In Line And Pie Graph Formation)</h3>
+        <h3 style="text-align: center;">(In Form Of Pie Chart)</h3>
     </div>
     <br>
-    <p class="bar_theory">The sentiments of people of India towards Lockdown and also towards Government decisions related to lockdown were analyzed from 25/March/2020 to 31/May/2020 ,i.e, during all the four phases of lockdown. The sentiments are represented in the line graph formation and pie chart formation as shown below. Here the line graph represents the same thing that is represented by by bar graph but in line formation. And the pie chart represents the total number of sentiments of each category for all over India during complete lockdown.</p>
+    <p class="bar_theory">The sentiments of people of India towards Lockdown and also towards Government decisions related to lockdown were analyzed from 25/March/2020 to 31/May/2020 ,i.e, during all the four phases of lockdown. The sentiments are represented pie chart formation as shown below. The pie chart represents the total number of sentiments of each category for all over India during complete lockdown.</p>
     <br>
     {{ls[5] | safe}}
-    <br>
-    <br>
-    {{ls[6] | safe}}
     <br>
     <br>
     <div class="table_graph">
@@ -119,7 +116,7 @@
     <br>
     <p class="bar_theory">Here the sentiments of Indian people towrds Lockdown and Government decisions related to lockdown were analyzed in another form ,i.e., state wise. In this we have analyzed the sentiments from 25/March/2020 to 31/May/2020 ,i.e, during all the four phases of lockdown. And after that shown them in a tabular form or table form in which sentiments are categorized according to the states in India. The table is shown below.</p>
     <br>
-    {{ls[7] | safe}}
+    {{ls[6] | safe}}
     <br>
     <br>
     <div class="text_image">
