added jumbotron styling

--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
         </ul>
     </nav>
     <br>
-    <div class="jumbotron">
+    <div class="jumbotron paral paralsec">
         <h1>Sentiment Analysis Of COVID-19 Tweets – Dashboard For Visualization</h1>
     </div>
     <br>
