Added boxplot into web page

--- a/templates/home.html
+++ b/templates/home.html
@@ -127,6 +127,11 @@
     <br>
     <p class="bar_theory">From the sentiment analysis of Indian People Tweets towards Lockdown and related information were analyzed and then the words or sentiments which effected the the data most are shown below in a form of image where bigger words affected more our sentiment data and then comes smaller words which affected less of our sentiment data.</p>
     <img src={{url_for('static',filename="images/word2.jpg")}} height="800" width="800" class="center"/>
+
+    {{ls[7]['andhra pradesh'] | safe}}
+    <br>
+    <br>
+    {{ls[7]['assam'] | safe}}
 </body>
 
 </html>
