updated plots on web page

--- a/templates/home.html
+++ b/templates/home.html
@@ -132,6 +132,11 @@
     <br>
     <br>
     {{ls[7]['assam'] | safe}}
+    <br> <br> <br> <br>
+    {{ls[8]['andhra pradesh'] | safe}}
+    <br>
+    <br>
+    {{ls[8]['assam'] | safe}}
 </body>
 
 </html>
