Created labels for table plot; states cummulative sentiments

--- a/templates/home.html
+++ b/templates/home.html
@@ -137,6 +137,15 @@
     <br>
     <br>
     {{ls[8]['assam'] | safe}}
+    <br>
+    <br>
+    <br>
+    {{ls[9]['Positive_sentiments']['andhra pradesh'] | safe}}
+    <br>
+    {{ls[9]['Negative_sentiments']['andhra pradesh'] | safe}}
+    <br>
+    {{ls[9]['Neutral_sentiments']['andhra pradesh'] | safe}}
+    <br> <br> <br>
 </body>
 
 </html>
