--- a/templates/home.html
+++ b/templates/home.html
@@ -111,10 +111,11 @@
     <br>
     <div class="table_graph">
         <h2><u>Sentiment of Different States During Complete Lockdown</u></h2>
-        <h3 style="text-align: center;">(In Table Formation)</h3>
+        <h3 style="text-align: center;">(In Table Formation And SunBurst Chart)</h3>
     </div>
     <br>
-    <p class="bar_theory">Here the sentiments of Indian people towrds Lockdown and Government decisions related to lockdown were analyzed in another form ,i.e., state wise. In this we have analyzed the sentiments from 25/March/2020 to 31/May/2020 ,i.e, during all the four phases of lockdown. And after that shown them in a tabular form or table form in which sentiments are categorized according to the states in India. The table is shown below.</p>
+    <p class="bar_theory">Here the sentiments of Indian people towrds Lockdown and Government decisions related to lockdown were analyzed in another form ,i.e., state wise. In this we have analyzed the sentiments from 25/March/2020 to 31/May/2020 ,i.e, during all the four phases of lockdown. And after that shown them in a tabular form or table form in which sentiments are categorized according to the states in India. Also by clicking on any particular row ,i.e., any state the row expands and shows diiferent kinds of plots for visualizing sentiments for that state. The table is shown below. After the table there is a sunburst plot which shows the sunburst plot analysis of different states.</p>
+    <br>
     <br>
     <div class="table-responsive">
         <table class="table">
@@ -589,6 +590,10 @@
             </tr>
         </table>
     </div>
+    <br>
+    <br>
+    <br>
+    {{ls[6] | safe}}
     <br>
     <br>
     <div class="text_image">
