added headings for table and plot

--- a/templates/home.html
+++ b/templates/home.html
@@ -85,6 +85,7 @@
     </p>
     <br>
     <br>
+    <h2><u>Sentiments of Different States During Lockdown in Table Form</u></h2>
     <div class="row">
         <div class="column">{{ls[0] | safe}}</div>
         <div class="column">{{ls[1] | safe}}</div>
@@ -593,7 +594,12 @@
     <br>
     <br>
     <br>
+    <br>
+    <h2><u>Sunburst Plot of Sentiment Analysis of Different States During Lockdown</u></h2>
+    <br>
+    <br>
     {{ls[6] | safe}}
+    <br>
     <br>
     <br>
     <div class="text_image">
