modifyied headings of plot

--- a/templates/home.html
+++ b/templates/home.html
@@ -85,7 +85,6 @@
     </p>
     <br>
     <br>
-    <h2><u>Sentiments of Different States During Lockdown in Table Form</u></h2>
     <div class="row">
         <div class="column">{{ls[0] | safe}}</div>
         <div class="column">{{ls[1] | safe}}</div>
@@ -118,6 +117,7 @@
     <p class="bar_theory">Here the sentiments of Indian people towrds Lockdown and Government decisions related to lockdown were analyzed in another form ,i.e., state wise. In this we have analyzed the sentiments from 25/March/2020 to 31/May/2020 ,i.e, during all the four phases of lockdown. And after that shown them in a tabular form or table form in which sentiments are categorized according to the states in India. Also by clicking on any particular row ,i.e., any state the row expands and shows diiferent kinds of plots for visualizing sentiments for that state. The table is shown below. After the table there is a sunburst plot which shows the sunburst plot analysis of different states.</p>
     <br>
     <br>
+    <h2 style="text-align: center;"><u>Sentiments of Different States During Lockdown in Table Form</u></h2>
     <div class="table-responsive">
         <table class="table">
             <tr>
@@ -594,8 +594,7 @@
     <br>
     <br>
     <br>
-    <br>
-    <h2><u>Sunburst Plot of Sentiment Analysis of Different States During Lockdown</u></h2>
+    <h2 style="text-align: center;"><u>Sunburst Plot of Sentiment Analysis of Different States During Lockdown</u></h2>
     <br>
     <br>
     {{ls[6] | safe}}
