--- a/CircularNavigation/templates/main.html
+++ b/CircularNavigation/templates/main.html
@@ -86,27 +86,29 @@
                 <h1>Covid-19 Sentiment Analysis </h1>   
             </header>
            <div class="card-columns">
-  <div class="card text-white bg-success mb-3" style="max-width: 18rem; margin-left: 80px">
-  <div class="card-header">Header</div>
-  <div class="card-body">
+  <div class="card border-success mb-3" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-success">Header</div>
+  <div class="card-body text-success">
     <h5 class="card-title">Success card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
-
- </div>
-  <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
-  <div class="card-body">
-    <h5 class="card-title">Danger card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
+  <div class="card-footer bg-transparent border-warning">Footer</div>
 </div>
-<div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
-  <div class="card-body">
-    <h5 class="card-title">Warning card title</h5>
+ <div class="card border-warning mb-3" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-warning">Header</div>
+  <div class="card-body text-warning">
+    <h5 class="card-title">warning card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
+  <div class="card-footer bg-transparent border-warning">Footer</div>
+</div>
+<div class="card border-danger mb-3" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-danger">Header</div>
+  <div class="card-body text-danger">
+    <h5 class="card-title">danger card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <div class="card-footer bg-transparent border-danger">Footer</div>
 </div>
 </div>
     <div id="geochart-colors" style="width: 1000px; height: 1000px; margin-left: 20px; 
