--- a/CircularNavigation/templates/main.html
+++ b/CircularNavigation/templates/main.html
@@ -339,11 +339,11 @@
 
         <div class="component">
             <!-- Start Nav Structure -->
-            <button class="cn-button" id="cn-button">+</button>
+            <button class="cn-button" id="cn-button">Menu</button>
             <div class="cn-wrapper" id="cn-wrapper">
                 <ul>
                     <li><a href="#"><span class="icon-picture"></span></a></li>
-                    <li><a href="{{url_for('four')}}"><span>four</span></a></li>
+                    <li><a href="{{url_for('four')}}"><span>4</span></a></li>
                     <li><a href="{{url_for('home')}}"><span class="icon-home"></span></a></li>
                     <li><a href="#"><span class="icon-facetime-video"></span></a></li>
                     <li><a href="#"><span class="icon-envelope-alt"></span></a></li>
