--- a/CircularNavigation/templates/main.html
+++ b/CircularNavigation/templates/main.html
@@ -339,7 +339,7 @@
 
         <div class="component">
             <!-- Start Nav Structure -->
-            <button class="cn-button" id="cn-button">Menu</button>
+            <button class="cn-button" id="cn-button">+</button>
             <div class="cn-wrapper" id="cn-wrapper">
                 <ul>
                     <li><a href="#"><span class="icon-picture"></span></a></li>
